--- a/ansible/prometheus/tasks/main.yml
+++ b/ansible/prometheus/tasks/main.yml
@@ -57,4 +57,7 @@
     name: prometheus
     state: started
     enabled: yes
-
+  retries: 2
+  delay: 10
+  register: resault
+  until: resault is succeeded
